JDK-8370922